shadows, button colors, fix whitespace

--- a/assets/css/classic-layout.scss
+++ b/assets/css/classic-layout.scss
@@ -20,6 +20,7 @@
       $bg-accent-color-light 0%,
       $bg-accent-color-dark 100%
     );
+    box-shadow: 0 0 0.25rem rgba(0,0,0,0.5);
     .content {
       & > :last-child {
         margin-bottom: 0 !important;
