--- a/assets/css/home-layout.scss
+++ b/assets/css/home-layout.scss
@@ -10,6 +10,7 @@
         $bg-accent-color-light 0%,
         $bg-accent-color-dark 100%
       );
+      box-shadow: 0 0 0.25rem rgba(0,0,0,0.5);
       padding: $base-margin-y $base-margin-x;
     }
     .bottom-container {
@@ -92,8 +93,8 @@
   .section-item {
     white-space: nowrap;
     text-decoration: none;
+    box-shadow: 0 0 0.25rem rgba(0,0,0,0.5);
     &:hover {
-      color: $fg-color;
       border: 1px solid $fg-accent-color;
     }
     display: block;
@@ -110,8 +111,10 @@
     }
     .label {
       font-size: 1.3rem;
+      font-weight: bold;
+      color: $fg-color-dark;
       vertical-align: middle;
-      margin: 0 0 0 0.5rem;
+      margin: 0 0 0 0.75rem;
     }
   }
 }
